--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	.card{border-radius: .45rem;}
 </style>
 <section class="p-5 m-5">
-	<div class="container p-3 col-sm-4">
+	<div class="container-fluid p-1 col-sm-6 col-lg-3">
 		<div class="card">
 			<div class="card-body">
 				<h5 class="card-title">Bienvenido al Control de Mantenimientos </h5>
